--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="w-full h-screen">
-    <div id="root" class="w-full h-screen"></div>
+  <body>
+    <div id="root" class="flex flex-col min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
