--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="flex flex-col justify-between min-h-screen"></div>
+    <div id="root" class="flex flex-col justify-between space-y-48 min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
